tests/error/member_from_static.gw
// [contains] 
class C {
  int i;
  static fun  void test() {
    <<<i>>>;
  }
}
